--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Invest, secure, guarantee - HHC"
+      content="Invest, secure, guarantee - Rothbard Investment Group"
     />
     <link rel="apple-touch-icon" href="" />
     <!--
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Home - Hackett Hill Capital </title>
+    <title>Rothbard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
